test_regress/t/t_class_param_nconst_bad.out
%Error-UNSUPPORTED: t/t_class_param_nconst_bad.v:12:11: Unsupported: parameterized classes
                                                      : ... In instance t
   12 |    Cls #(.PARAM($random)) c;   
      |           ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_class_param_nconst_bad.v:7:23: Unsupported: class parameters
                                                     : ... In instance t
    7 | class Cls #(parameter PARAM = 12);
      |                       ^~~~~
%Error: Exiting due to
